update halaman  marketplace
istirahat dulu bentar hehe

--- a/marketplace.html
+++ b/marketplace.html
@@ -76,119 +76,136 @@
     <main>
 
         <!-- categori -->
-        <div class="kotak1">
-            <div class="kotak2">
+        <div class="kotak">
+          <div class="kota">
+
             <h3>CATEGORIES</h3>
-            <p>Lokasi :</p>
-            <ul>
-                <li>jabobetabek</li>
-                <li>jawa timur</li>
-                <li>jawa tengah</li>
-                <li>jawa barat</li>
-            <ul>
+            <p>Lokasi:</p>
 
-            <hr>
-            <p>Penilayan :</p>
-            <ul>
-                <li>bintang 1</li>
-                <li>bintang 2</li>
-                <li>bintang 3</li>
-                <li>bintang 4</li>
-                <li>bintang 5</li>
+            <div class="list">
+            <ul class="row row-cols-md-3">
+              <li><a href="#">Jabode tabek</a></li>
+              <li><a href="#">Jawa Tengah</a></li>
+              <li><a href="#">Jawa Barat</a></li>
+              <li><a href="#">Jawa Timur</a></li>
             </ul>
 
             <hr>
-            <p>Promo :</p>
-            <ul>
-                <li>Gratis ongkir</li>
-                <li>Casback extra</li>
+
+            <p>Penilaian:</p>
+            <ul class="row row-cols-md-3">
+              <li>bintang 1</li>
+              <li>bintang 2</li>
+              <li>bintang 3</li>
+              <li>bintang 4</li>
+              <li>bintang 5</li>
             </ul>
 
             <hr>
-            <p>Kategori barang :</p>
-            <ul>
-                <li>Hiasan rumah</li>
-                <li>patung</li>
-                <li>Fashion</li>
-                <li>Peralatan rumah</li>
+
+            <p>Promo:</p>
+            <ul class="row row-cols-md-3">
+              <li>Gratis Ongkir</li>
+              <li>Casback Xtra</li>
             </ul>
 
-        </div>
+            <hr>
+
+            <p>Kategori Barang:</p>
+            <ul class="row row-cols-md-3">
+              <li>Hiasan Rumah</li>
+              <li>Patung</li>
+              <li>Fashion</li>
+              <li>Peralatan Rumah</li>
+            </ul>
+
+          </div>
+          </div>
         </div>
 
         <!-- content 1-->
-        <div class="row row-cols-1 row-cols-md-2 g-4" id="kertas1">
+        <div class="row row-cols-1 row-cols-md-4 g-4" id="kertas1">
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/Tas.png" class="card-img-top" alt="tas plastik">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Tas dari Plastik Minuman</h5>
+                  <p class="card-text">Rp 50.000</p>
                 </div>
+                <button id="tombol" >Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/Tutup.png" class="card-img-top" alt="Tutup botol plastik">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Keranjang Buah dari Tutup Botol</h5>
+                  <p class="card-text">Rp 35.000</p>
                 </div>
+                <button id="tombol" >Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/pot.png" class="card-img-top" alt="Pot bunga kertas">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Pot + Bunga dari Koran</h5>
+                  <p class="card-text">Rp 45.000</p>
                 </div>
+                <button id="tombol" >Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/Patung.png" class="card-img-top" alt="patung rantai besi">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Patung Anjing dari Rantai Bekas</h5>
+                  <p class="card-text">Rp 200.000</p>
                 </div>
+                <button id="tombol" >Beli</button>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="card">
+                <img src="/assets/jam.png" class="card-img-top" alt="jam dinding kertas">
+                <div class="card-body">
+                  <h5 class="card-title">Jam Dinding dari Koran</h5>
+                  <p class="card-text">Rp 65.000</p>
+                </div>
+                <button id="tombol" >Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/patungkoran.png" class="card-img-top" alt="patungkoran">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Patung dari Koran</h5>
+                  <p class="card-text">Rp 150.000</p>
                 </div>
+                <button id="tombol">Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/Tongsampah.png" class="card-img-top" alt="Tongsampah">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Tempat Sampah dari Koran</h5>
+                  <p class="card-text">Rp 90.000</p>
                 </div>
+                <button id="tombol">Beli</button>
               </div>
             </div>
             <div class="col">
               <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/assets/Tas2.png" class="card-img-top" alt="Tas dari platik">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <h5 class="card-title">Tas dari Plastik Minuman</h5>
+                  <p class="card-text">Rp 60.000</p>
                 </div>
+                <button id="tombol">Beli</button>
               </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-              </div>
+
             </div>
           </div>
 
