--- a/ProfilBeranda.html
+++ b/ProfilBeranda.html
@@ -3,65 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us</title>
+    <title>Login Form</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/CSS/about.css" />
+    <link rel="stylesheet" href="CSS/ProfilBeranda.css">
   </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #ffede9 0, #ffede9 25%, #cfe2e8 75%, #cfe2e8 75%, #cfe2e8 100%)">
-      <div class="container">
-        <a class="navbar-brand" href="about us.html"> <img src="/assets/logo.png" alt="Logo" width="100" height="50" /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="Beranda.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="InputSampah.html">Explore</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="a&b.html">Content & Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#marketplace">Marketplace</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile" /></a>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <!-- Akhir Navbar -->
+  <body class="template">
 
-    <!-- Side Bar -->
-    <div class="container-fluid">
-        <div class="row-flex-nowrap"></div>
-      <div class="flex-wrap">
-        <div class="bg-transparant">
-          <div class="d-flex text-decoration-none align-item-center"><i class="fs-5 fa fa-guage"></i><span class="fs-4 d-none d-sm-inline">SideMenu</span></div>
+            <!-- Navbar -->
+            <nav class="navbar navbar-expand-lg fixed-top" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%); padding:0px;">
+              <div class="container"style="height:70px;>
+                <a class="navbar-brand" href="about us.html">
+                  <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Beranda.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="about.html">About Us</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="InputSampah.html">Explore</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="a&b.html">Content & Blog</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#marketplace">Marketplace</a>
+                      </li>
+                    </ul>
+                    <form class="d-flex">
+                      <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile"></a>
+                    </form>
+                  </div>
+                </div>
+              </nav>
+    <!--Side Bar-->
+    <div class="header">
+      <div class="side-nav">
+        <div class="user">
+          <img src="assets/icon Side Bar/profile1.png" class="user-img">
+          <div>
+            <h2>MR.Bee</h2>
+            <p>mrbee@xyz</p>
+          </div>
+          <img src="assets/icon Side Bar/star.png" class="star-img">
         </div>
+        <ul>
+          <li><img src="assets/icon Side Bar/dashboard.png"><p>Beranda</p></li>
+          <li><img src="assets/icon Side Bar/user.png"><p>Profile</p></li>
+        </ul>
+        <ul>
+          <li><img src="assets/icon Side Bar/logout.png"><p>Keluar</p></li>
+        </ul>
       </div>
+          <!--Akhir Side Bar-->
+
+
+    <!-- awal content -->
+        <div class="container" style="top: 0;">
+            <div class="position-absolute top-40 start-50">
+                <img class="" src="assets/icon Side Bar/profile1.png"  style="margin-top: 120px;  border-radius: 60%;">
+                  <h2 style="left: 20px; text-align: center;">Selamat Datang,<br> MR. Bee</h2>
+            </div>
+            <!-- <div class="card-group">
+              <div class="card">
+                <video width="350" height="150"controls poster="/assets/gambr.png">
+                <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
+                </video>
+                <a href="/Detail Video/DetVid.html"><button id="Dvidio">Detailt Vidio</button></a>
+              </div> -->
+        </div>
+    <!-- akhir content -->
+
+
     </div>
+
+
+
+
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+  ></script>
 </html>
