--- a/marketplace.html
+++ b/marketplace.html
@@ -226,7 +226,7 @@
             </div>
             <div class="kotak4">
               <input type="text" class="but1" placeholder=" Email"><br>
-              <button class="but2">SUMBIT</button>
+              <button class="but2">SUBMIT</button>
             </div>
           </div>
 
