--- a/Profilll.html
+++ b/Profilll.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DashBoard Profil</title>
+    <title>Profil</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -48,78 +48,57 @@
               </nav>
     <!--Side Bar-->
     <div class="header">
-      <div class="side-nav">
-        <div class="user">
-          <img src="assets/icon Side Bar/profile1.png" class="user-img">
-          <div>
-            <h2>MR.Bee</h2>
-            <p>mrbee@xyz</p>
+        <div class="side-nav">
+          <div class="user">
+            <img src="assets/icon Side Bar/profile1.png" class="user-img">
+            <div>
+              <h2>MR.Bee</h2>
+              <p>mrbee@xyz</p>
+            </div>
+            <img src="assets/icon Side Bar/star.png" class="star-img">
           </div>
-          <img src="assets/icon Side Bar/star.png" class="star-img">
+          <ul>
+            <li><a href="ProfilBeranda.html"><img src="assets/icon Side Bar/dashboard.png"><p>Beranda</p></a></li>
+            <li><a href="Profilll.html"><img src="assets/icon Side Bar/user.png"><p>Profile</p></a></li>
+          </ul>
+          <ul>
+            <li><a href="login.html"><img src="assets/icon Side Bar/logout.png"><p>Keluar</p></a></li>
+          </ul>
         </div>
-        <ul>
-          <li><a href="ProfilBeranda.html"><img src="assets/icon Side Bar/dashboard.png"><p>Beranda</p></a></li>
-          <li><a href="Profilll.html"><img src="assets/icon Side Bar/user.png"><p>Profile</p></a></li>
-        </ul>
-        <ul>
-          <li><a href="login.html"><img src="assets/icon Side Bar/logout.png"><p>Keluar</p></a></li>
-        </ul>
-      </div>
           <!--Akhir Side Bar-->
 
 
     <!-- awal content -->
-        <div class="container" style="top: 0;">
-            <div class="position-absolute top-40 start-50">
-                <img class="" src="assets/icon Side Bar/profile1.png"  style="margin-top: 120px;  border-radius: 60%;">
-                  <h2 style="text-align: center;">Selamat Datang,<br> MR. Bee</h2>
+    <div class="conten">
+        <ul>
+            <li><input type="text"></li>
+            <li></li>
+        </ul>
+
+    </div>
+
+
+
+
+        <!-- <div class="container">
+            <div class="container overflow-hidden text-center">
+                <div class="row gx-5">
+                <div class="col">
+                <div class="p-4">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                    <div class="p-3">Custom column padding</div>
+                </div>
+                </div>
             </div>
-        </div>
+        </div> -->
+
     <!-- akhir content -->
-
-    <div class="card1" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
-      <div class="card-body">
-        <p class="card-text ">Vidio yang Di Sukai</p>
-      </div>
-    </div>
-
-    <div class="card2" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
-      <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
-      </div>
-    </div>
-
-    <div class="card3" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
-      <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
-      </div>
-    </div>
-
-    <div class="card4" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
-      <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
-      </div>
-    </div>
-
-
-
-
-    </div>
-
-
-
 
   </body>
   <script
