--- a/Detail.html
+++ b/Detail.html
@@ -56,10 +56,10 @@
                           <p class="selamat-datang2">MR. Be</p>
                         </div>
                           <div class="kelola">
-                            <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="profile.html" id="text1">Kelola akun anda</a></button>
+                            <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="ProfilBeranda.html" id="text1">Kelola akun anda</a></button>
                           </div>
                           <div class="kelola">
-                            <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="profile.html" id="text2">Keluar</a></button>
+                            <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="Beranda.html" id="text2">Keluar</a></button>
                           </div>
                         </div>
 
