--- a/marketplace.html
+++ b/marketplace.html
@@ -141,7 +141,7 @@
                   <h5 class="card-title">Tas dari Plastik Minuman</h5>
                   <p class="card-text">Rp 50.000</p>
                 </div>
-                <button id="tombol" >Beli</button>
+                <button id="tombol" ><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -151,7 +151,7 @@
                   <h5 class="card-title">Keranjang Buah dari Tutup Botol</h5>
                   <p class="card-text">Rp 35.000</p>
                 </div>
-                <button id="tombol" >Beli</button>
+                <button id="tombol" ><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -161,7 +161,7 @@
                   <h5 class="card-title">Pot + Bunga dari Koran</h5>
                   <p class="card-text">Rp 45.000</p>
                 </div>
-                <button id="tombol" >Beli</button>
+                <button id="tombol" ><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -171,7 +171,7 @@
                   <h5 class="card-title">Patung Anjing dari Rantai Bekas</h5>
                   <p class="card-text">Rp 200.000</p>
                 </div>
-                <button id="tombol" >Beli</button>
+                <button id="tombol" ><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
 
@@ -182,7 +182,7 @@
                   <h5 class="card-title">Jam Dinding dari Koran</h5>
                   <p class="card-text">Rp 65.000</p>
                 </div>
-                <button id="tombol" >Beli</button>
+                <button id="tombol" ><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -192,7 +192,7 @@
                   <h5 class="card-title">Patung dari Koran</h5>
                   <p class="card-text">Rp 150.000</p>
                 </div>
-                <button id="tombol">Beli</button>
+                <button id="tombol"><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -202,7 +202,7 @@
                   <h5 class="card-title">Tempat Sampah dari Koran</h5>
                   <p class="card-text">Rp 90.000</p>
                 </div>
-                <button id="tombol">Beli</button>
+                <button id="tombol"><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
             </div>
             <div class="col">
@@ -212,7 +212,7 @@
                   <h5 class="card-title">Tas dari Plastik Minuman</h5>
                   <p class="card-text">Rp 60.000</p>
                 </div>
-                <button id="tombol">Beli</button>
+                <button id="tombol"><a href="DetailtP.html" id="Beli">Beli</a></button>
               </div>
 
             </div>
