--- a/DetailtP.html
+++ b/DetailtP.html
@@ -76,6 +76,21 @@
             <!-- akhir navbar -->
     </header>
     <main>
+
+            <!-- sreach -->
+            <div class="input-group">
+              <div class="form-outline">
+                <input type="search" id="form1" class="form-control" placeholder="cari"/>
+              </div>
+              <button type="button" class="btn btn-primary">
+                <img  class="gambar3" src="/assets/search.png">
+              </button>
+              <div class="icon">
+                <a href="#"><img src="/assets/shopping-cart-add.png" id="icontop" alt="icon keranjang"></a>
+                <a href="#"><img src="/assets/messages.png" id="icontop" alt="icon keranjang"></a>
+              </div>
+            </div>
+
         <img src="/assets/Tas.png" alt="Tas dari Plastik Minuman">
         <p>Tas ini terbuat dari plastik minuman bekas berkualitas tinggi, yang mendukung upaya daur ulang dan pelestarian lingkungan. Tas ini memiliki desain modern dan fungsional yang cocok untuk berbagai kesempatan. Dimensinya adalah 20 cm x 10 cm x 10 cm, cukup besar untuk membawa barang-barang sehari-hari Anda. Tas ini dirancang dengan konstruksi jahitan berkualitas tinggi, menjadikannya tahan lama. Finishing yang rapi memastikan bahwa setiap tas memiliki tampilan yang bersih dan menarik. Kami menguji kekuatan dan daya tahan tas secara ketat untuk memastikan kualitasnya. Anda dapat mengandalkan tas ini untuk digunakan sehari-hari dan berkegiatan aktif. Bahan plastik yang kami gunakan aman dan sesuai dengan standar lingkungan. Dengan memilih tas ini, Anda ikut berkontribusi pada usaha pelestarian lingkungan dengan mendukung daur ulang plastik.</p>
         <form action="cart.php" method="post">
@@ -84,7 +99,7 @@
         </form>
     </main>
     <footer>
-        <p>Copyright 2023 Tas dari Plastik Minuman</p>
+      
     </footer>
 </body>
 </html>
