--- a/InputSampah.html
+++ b/InputSampah.html
@@ -11,14 +11,12 @@
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top"
-    style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
-    <div class="container">
-      <a class="navbar-brand" href="about us.html">
-        <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg" style="background-image: radial-gradient(circle at -18.3% 31.7%, #FFEDE9 0, #FFEDE9 25%, #CFE2E8 75%, #CFE2E8 75%, #CFE2E8 100%);">
+  <div class="container">
+    <a class="navbar-brand" href="about us.html">
+      <img src="/assets/logo.png" alt="Logo" width="100" height="50"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,7 +38,38 @@
           </li>
         </ul>
         <form class="d-flex">
-          <a href="Profil.html"><img src="/assets/icon profile.png" alt="icon profile"></a>
+          
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" id="btnprofile" data-bs-toggle="modal" data-bs-target="#exampleModal">Profile</button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+
+                <div class="kertas">
+                <a href="Detail.html" id="keluar"><img src="/assets/MacOS Close.png" alt="close"></a>
+                <img id="gambarmr" src="/assets/mrbi.png" alt="icon" >
+                <div class="satu">
+                  <p class="selamat-datang">Selamat Datang,</p>
+                  <p class="selamat-datang2">MR. Be</p>
+                </div>
+                  <div class="kelola">
+                    <button><img id="icon" src="/assets/Male User.png" alt="icon" ><a href="ProfilBeranda.html" id="text1">Kelola akun anda</a></button>
+                  </div>
+                  <div class="kelola">
+                    <button><img id="icon2" src="/assets/Logout Rounded.png" alt="icon" ><a href="Beranda.html" id="text2">Keluar</a></button>
+                  </div>
+                </div>
+
+              </div>
+              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+          
         </form>
       </div>
     </div>
