update profill beranda

--- a/ProfilBeranda.html
+++ b/ProfilBeranda.html
@@ -77,8 +77,8 @@
         </div>
     <!-- akhir content -->
 
-    <div class="card1" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
+    <div class="card-1" style="width: 18rem;">
+      <video width="284" height="120"controls poster="/assets/gambr.png">
         <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
         </video>
       <div class="card-body">
@@ -87,29 +87,29 @@
     </div>
 
     <div class="card2" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
+      <video width="284" height="120"controls poster="/assets/gambr.png">
         <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
         </video>
       <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
+        <p class="card-text ">Artikel yang Di sukai</p>
       </div>
     </div>
 
     <div class="card3" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
+      <video width="284" height="120"controls poster="/assets/gambr.png">
         <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
         </video>
       <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
+        <p class="card-text ">Produk Favorit</p>
       </div>
     </div>
 
     <div class="card4" style="width: 18rem;">
-      <video width="260" height="100"controls poster="/assets/gambr.png">
+      <video width="284" height="120"controls poster="/assets/gambr.png">
         <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
         </video>
       <div class="card-body">
-        <p class="card-text ">Artikel yangDi sukai</p>
+        <p class="card-text ">Terakhir di lihat</p>
       </div>
     </div>
 
