update profile beranda

--- a/ProfilBeranda.html
+++ b/ProfilBeranda.html
@@ -60,8 +60,6 @@
         <ul>
           <li><a href="ProfilBeranda.html"><img src="assets/icon Side Bar/dashboard.png"><p>Beranda</p></a></li>
           <li><a href="Profilll.html"><img src="assets/icon Side Bar/user.png"><p>Profile</p></a></li>
-        </ul>
-        <ul>
           <li><a href="login.html"><img src="assets/icon Side Bar/logout.png"><p>Keluar</p></a></li>
         </ul>
       </div>
@@ -86,19 +84,15 @@
       </div>
     </div>
 
-    <div class="card2" style="width: 18rem;">
-      <video width="284" height="120"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
+    <div class="card2" style="width: 17rem;">
+      <img src="assets/gambar_2.png" class="card-img-top"  alt="...">
       <div class="card-body">
-        <p class="card-text ">Artikel yang Di sukai</p>
+        <p class="card-text ">Artikel Yang Di Sukai</p>
       </div>
     </div>
 
     <div class="card3" style="width: 18rem;">
-      <video width="284" height="120"controls poster="/assets/gambr.png">
-        <source src= "/assets/Vidio1.mp4"type="video/mp4"> 
-        </video>
+      <img src="assets/gambar_1.png" class="card-img-top"  alt="...">
       <div class="card-body">
         <p class="card-text ">Produk Favorit</p>
       </div>
