--- a/DetailtP.html
+++ b/DetailtP.html
@@ -91,11 +91,20 @@
               </div>
             </div>
 
-        <div class="koran">
-        <div class="row row-cols-md-3">
-        <img src="/assets/Tas.png" id="gmbr" alt="Tas dari Plastik Minuman">
-        <h1>Tas dari Plastik Minuman</h1>
-        </div>
+            <div class="card mb-3" style="max-width: 100%;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="/assets/Tas.png" class="img-fluid rounded-start" alt="Tas platik">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
     </main>
     <footer>
