--- a/DetailtP.html
+++ b/DetailtP.html
@@ -91,16 +91,20 @@
               </div>
             </div>
 
-            <div class="card mb-3" style="max-width: 100%;">
+            <div class="card mb-3"  style="max-width: 100%;">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="/assets/Tas.png" class="img-fluid rounded-start" alt="Tas platik">
+                  <img src="/assets/Tas.png" id="Tas" class="img-fluid rounded-start" alt="Tas platik">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title judul">Tas dari Plastik Minuman</h5>
+                    <p class="card-text">Rating | 50 Penilaian | 54 Terjual </p>
+                    <p class="card-text">icon merek penjualan </p>
+                    <p class="card-text">pengiriman</p>
+                    <h5 class="card-title">Tas dari Plastik Minuman</h5>
+                    <p class="card-text">Tas ini terbuat dari plastik minuman bekas berkualitas tinggi, yang mendukung upaya daur ulang dan pelestarian lingkungan.</p>
+                    <p class="card-text">Tas ini memiliki desain modern dan fungsional yang cocok untuk berbagai kesempatan.Dimensinya adalah 20 cm x 10 cm x 10 cm, cukup besar untuk membawa barang-barang sehari-hari Anda.Tas ini dirancang dengan konstruksi jahitan berkualitas tinggi, menjadikannya tahan lama.Finishing yang rapi memastikan bahwa setiap tas memiliki tampilan yang bersih dan menarik.Kami menguji kekuatan dan daya tahan tas secara ketat untuk memastikan kualitasnya. Anda dapat mengandalkan tas ini untuk digunakan sehari-hari dan berkegiatan aktif.Bahan plastik yang kami gunakan aman dan sesuai dengan standar lingkungan.Dengan memilih tas ini, Anda ikut berkontribusi pada usaha pelestarian lingkungan dengan mendukung daur ulang plastik.</p>
                   </div>
                 </div>
               </div>
